@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2011-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.loggers;
 
@@ -373,10 +374,11 @@ public abstract class AbstractLogger
     String className = config.getJavaClass();
     ClassPropertyDefinition pd = getJavaClassPropertyDefinition();
     try {
-      P publisher = pd.loadClass(className, logPublisherClass).newInstance();
+      P publisher = pd.loadClass(className, logPublisherClass).getDeclaredConstructor().newInstance();
       return publisher.isConfigurationAcceptable(config, unacceptableReasons);
     } catch (Exception e) {
-      unacceptableReasons.add(invalidLoggerClassErrorMessage.get(className, config.dn(), e));
+      unacceptableReasons.add(invalidLoggerClassErrorMessage.get(className, config.dn(),
+          stackTraceToSingleLineString(e)));
       return false;
     }
   }
@@ -386,14 +388,14 @@ public abstract class AbstractLogger
     String className = config.getJavaClass();
     ClassPropertyDefinition pd = getJavaClassPropertyDefinition();
     try {
-      P logPublisher = pd.loadClass(className, logPublisherClass).newInstance();
+      P logPublisher = pd.loadClass(className, logPublisherClass).getDeclaredConstructor().newInstance();
       logPublisher.initializeLogPublisher(config, serverContext);
       return logPublisher;
     }
     catch (Exception e)
     {
       throw new ConfigException(
-          invalidLoggerClassErrorMessage.get(className, config.dn(), e), e);
+          invalidLoggerClassErrorMessage.get(className, config.dn(), stackTraceToSingleLineString(e)), e);
     }
   }
 
